--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -2,12 +2,12 @@
 
     <string name="app_notxposed" formatted="false">Не установлен Xposed framework версии %d+</string>
     <string name="app_notenabled">Модуль XPrivacy не активирован в Xposed installer</string>
-    <string name="app_wrongandroid">Работа проверялась только на Android версии 4.0 и выше</string>
+    <string name="app_wrongandroid">Работа проверялась только на Android версий 4.0, 4.1 и 4.2</string>
     <string name="app_version" formatted="false">Версия XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Версия Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="menu_settings">Параметры</string>
-    <string name="menu_template">Template</string>
+    <string name="menu_template">Шаблон</string>
     <string name="menu_update">Проверить обновления</string>
     <string name="menu_report">Сообщить об ошибке</string>
     <string name="menu_export">Экспорт настроек</string>
@@ -19,26 +19,26 @@
     <string name="menu_app_launch">Запустить приложение</string>
     <string name="menu_app_settings">Настройки приложения</string>
     <string name="menu_app_store">Play Маркет</string>
-    <string name="menu_accounts">Select accounts to allow</string>
-    <string name="menu_contacts">Select contacts to allow</string>
+    <string name="menu_accounts">Выберите разрешенные учетные записи</string>
+    <string name="menu_contacts">Выберите разрешенные контакты</string>
     <string name="msg_noupdate">Обновлений нет</string>
     <string name="msg_restricted" formatted="false">%s запрещено XPrivacy</string>
     <string name="msg_licensed" formatted="false">Владелец лицензии: %s</string>
-    <string name="msg_loading">Loading</string>
-    <string name="msg_edit">Click the application icon to edit all restrictions</string>
-    <string name="msg_sure">Are you sure?</string>
+    <string name="msg_loading">Загрузка</string>
+    <string name="msg_edit">Нажмите на иконку приложения для редактирования всех разрешений</string>
+    <string name="msg_sure">Вы уверены?</string>
     <string name="msg_done">Готово</string>
-    <string name="msg_reboot">Reboot required</string>
-    <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
-however it is impossible to guarantee it will work flawless on each and every device and for each and every application.
-\n\nUse is entirely at your own risk.</b>\n\nSee also the license:</string>
+    <string name="msg_reboot">Требуется перезагрузка</string>
+    <string name="msg_first"><b>Большое внимание было уделено разработке и тестированию XPrivacy, 
+однако нельзя гарантировать, что оно будет работать безупречно на всех устройствах и со всеми приложениями.
+\n\nИспользуйте исключительно на свой страх и риск.</b>\n\nСм. также лицензию:</string>
     <string name="restrict_accounts">Учетные записи (Google, Facebook и т.д.)</string>
     <string name="restrict_browser">Браузер (закладки/история)</string>
     <string name="restrict_calendar">Календарь</string>
     <string name="restrict_calling">Инициация звонков, отправка SMS/MMS</string>
     <string name="restrict_contacts">Контакты</string>
     <string name="restrict_dictionary">Пользовательский словарь</string>
-    <string name="restrict_identification">Идентификатор устройства</string>
+    <string name="restrict_identification">Идентификация устройства</string>
     <string name="restrict_internet">Интернет</string>
     <string name="restrict_location">Местоположение (точное/приблизительное)</string>
     <string name="restrict_media">Медиа (аудио, фото, видео)</string>
@@ -46,24 +46,24 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_network">Сеть (адреса)</string>
     <string name="restrict_phone">Телефон (ID, номера, журнал вызовов)</string>
     <string name="restrict_storage">Хранилище (медиа, карта памяти)</string>
-    <string name="restrict_shell">команды shell (вкл. суперпользователя)</string>
+    <string name="restrict_shell">Команды shell (вкл. суперпользователя)</string>
     <string name="restrict_system">Система (установленные приложения)</string>
     <string name="restrict_view">Просмотр (браузер)</string>
-    <string name="title_category">Category:</string>
+    <string name="title_category">Категория:</string>
     <string name="title_restrict">Отметьте приложения:</string>
     <string name="settings_lat">Широта</string>
     <string name="settings_lon">Долгота</string>
     <string name="settings_mac">MAC-адрес</string>
     <string name="settings_phone">Номер телефона</string>
     <string name="settings_id">Android ID</string>
-    <string name="settings_country">Country</string>
+    <string name="settings_country">Страна</string>
     <string name="settings_subscriber">Subscriber ID</string>
-    <string name="settings_fpermission">Filter by permission</string>
-    <string name="settings_fsystem">Filter system applications</string>
+    <string name="settings_fpermission">Фильтровать по разрешениям</string>
+    <string name="settings_fsystem">Скрывать системные приложения</string>
     <string name="help_application">Приложение</string>
     <string name="help_internet">запрашивает доступ в интернет</string>
     <string name="help_granted">имеет разрешение Android</string>
     <string name="help_used">данные уже использовались</string>
-    <string name="help_dangerous">is dangerous</string>
+    <string name="help_dangerous">изменение разрешений опасно</string>
     
 </resources>
