--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -7,7 +7,7 @@
     <string name="app_xversion" formatted="false">Xposed framework version: %d</string>
     <string name="app_copyright">Telif hakkı \u00A9 2013, M. Bokhorst (M66B)</string>
     <string name="menu_settings">Ayarlar</string>
-    <string name="menu_template">Template</string>
+    <string name="menu_template">Şablon</string>
     <string name="menu_update">Güncelleştirme Ara</string>
     <string name="menu_report">Problem Bildir</string>
     <string name="menu_export">Ayarları dışa aktar</string>
@@ -20,7 +20,7 @@
     <string name="menu_app_settings">Ayarlar</string>
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">İzin verilecek hesapları seç</string>
-    <string name="menu_contacts">Select contacts to allow</string>
+    <string name="menu_contacts">İzin verilecek kişileri seç</string>
     <string name="msg_noupdate">Güncelleştirme yok</string>
     <string name="msg_restricted" formatted="false">%s XPrivacy tarafından engellendi</string>
     <string name="msg_licensed" formatted="false">%s adına lisanslıdır.</string>
@@ -28,10 +28,9 @@
     <string name="msg_edit">Tüm izinleri düzenlemek için uygulamanın simgesine dokun</string>
     <string name="msg_sure">Emin misin?</string>
     <string name="msg_done">Bitti</string>
-    <string name="msg_reboot">Reboot required</string>
-    <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
-however it is impossible to guarantee it will work flawless on each and every device and for each and every application.
-\n\nUse is entirely at your own risk.</b>\n\nSee also the license:</string>
+    <string name="msg_reboot">Yeniden başlatma gerekli</string>
+    <string name="msg_first"><b>Xprivacy titizlikle geliştirilmiş ve test edilmiştir, ancak her cihazda veya her uygulamada kusursuz çalışacağını garantilemek imkansızdır.
+\n\nKullanım riski tamamen size aittir.</b>\n\nAyrıca lisansa bakınız:</string>
     <string name="restrict_accounts">Hesaplar (Google, Facebook, vb)</string>
     <string name="restrict_browser">Tarayıcı (yer imleri/geçmiş)</string>
     <string name="restrict_calendar">Takvim</string>
@@ -49,7 +48,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_shell">Kabuk (komutlar, superuser)</string>
     <string name="restrict_system">Sistem (yüklü uygulamalar)</string>
     <string name="restrict_view">Göster (tarayıcı)</string>
-    <string name="title_category">Category:</string>
+    <string name="title_category">Kategori:</string>
     <string name="title_restrict">Engellemek için işaretle:</string>
     <string name="settings_lat">Enlem</string>
     <string name="settings_lon">Boylam</string>
@@ -59,11 +58,11 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="settings_country">Ülke</string>
     <string name="settings_subscriber">Sim Numarası (IMSI)</string>
     <string name="settings_fpermission">İzne göre filtre et</string>
-    <string name="settings_fsystem">Filter system applications</string>
+    <string name="settings_fsystem">Sistem uygulamalarını gösterme</string>
     <string name="help_application">Uygulama</string>
     <string name="help_internet">internet izni var</string>
     <string name="help_granted">Android izni var</string>
     <string name="help_used">bu izni kullandı</string>
-    <string name="help_dangerous">is dangerous</string>
+    <string name="help_dangerous">tehlikeli izin</string>
     
 </resources>
