Add help for frozen

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -64,6 +64,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="help_internet">لديه صلاحية الوصول للإنترنت</string>
     <string name="help_granted">لديه صلاحية أندرويد</string>
     <string name="help_used">يستخدم هذه البيانات</string>
+    <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">خطير</string>
     
 </resources>
