--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -64,6 +64,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="help_internet">Internet engedély</string>
     <string name="help_granted">Android engedély</string>
     <string name="help_used">Használta ezt az adatot</string>
+    <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">Veszélyes</string>
     
 </resources>
