--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -64,6 +64,7 @@
     <string name="help_internet">hat Internet Berechtigung</string>
     <string name="help_granted">hat Android Berechtigung</string>
     <string name="help_used">hat diese Daten benutzt</string>
+    <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">Beschränkung bedenklich (App-Absturz)</string>
     
 </resources>
