--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -64,6 +64,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="help_internet">έχει άδεια internet</string>
     <string name="help_granted">έχει άδεια Android</string>
     <string name="help_used">έχει χρησιμοποιήσει αυτά τα δεδομένα</string>
+    <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">είναι επικίνδυνη</string>
 
 </resources>
