--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -64,6 +64,7 @@
     <string name="help_internet">はインターネット権限を持っています</string>
     <string name="help_granted">はAndroid権限を持っています</string>
     <string name="help_used">はそのデータを使用しています</string>
+    <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">は危険です</string>
     
 </resources>
