--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -64,6 +64,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="help_internet">Tem permissão da internet</string>
     <string name="help_granted">Tem permissão do Android</string>
     <string name="help_used">Tem usado estes dados</string>
+    <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">É perigoso</string>
 
 </resources>
