--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -64,6 +64,7 @@
     <string name="help_internet">запрашивает доступ в интернет</string>
     <string name="help_granted">имеет разрешение Android</string>
     <string name="help_used">данные уже использовались</string>
+    <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">изменение разрешений опасно</string>
     
 </resources>
