--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -63,6 +63,7 @@
     <string name="help_internet">internet izni var</string>
     <string name="help_granted">Android izni var</string>
     <string name="help_used">bu izni kullandı</string>
+    <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">tehlikeli izin</string>
     
 </resources>
