--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -64,6 +64,7 @@
     <string name="help_internet">表示联网的权限</string>
     <string name="help_granted">表示授予的权限</string>
     <string name="help_used">表示使用的数据</string>
+    <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">表示勿轻易限制</string>
 
 </resources>
