Updated Lithuanian translation

--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -9,7 +9,7 @@
     <string name="menu_settings">Parametrai</string>
     <string name="menu_template">Ruošiniai</string>
     <string name="menu_update">Tikrinti atnaujinimus</string>
-    <string name="menu_report">Pranesti problemą</string>
+    <string name="menu_report">Pranešti problemą</string>
     <string name="menu_export">Exportuoti</string>
     <string name="menu_import">Importuoti</string>
     <string name="menu_theme">Keisti temą</string>
@@ -17,30 +17,30 @@
     <string name="menu_about">Apie</string>
     <string name="menu_all">Visos</string>
     <string name="menu_app_launch">Paleisti</string>
-    <string name="menu_app_settings">Parametrai</string>
+    <string name="menu_app_settings">Programos informacija</string>
     <string name="menu_app_store">Play Store</string>
-    <string name="menu_accounts">Leisti pažymetas paskyras</string>
-    <string name="menu_contacts">Leisti pažymetus kontaktus</string>
+    <string name="menu_accounts">Leisti pažymėtas paskyras</string>
+    <string name="menu_contacts">Leisti pažymėtus kontaktus</string>
     <string name="msg_noupdate">Atnaujinimas negalimas</string>
     <string name="msg_restricted" formatted="false">%s apribota XPrivacy</string>
     <string name="msg_licensed" formatted="false">licencija: %s</string>
-    <string name="msg_loading">Palaukite</string>
-    <string name="msg_edit">Spustelėkite programos piktogramą redaguoti visus apribojimus</string>
-    <string name="msg_sure">Esi tikras?</string>
+    <string name="msg_loading">Palaukite...</string>
+    <string name="msg_edit">Spustelėkite programos piktogramą norėdami redaguoti apribojimus</string>
+    <string name="msg_sure">Esate tikri?</string>
     <string name="msg_done">Atlikta</string>
-    <string name="msg_reboot">Privaloma perkrauti</string>
-    <string name="msg_first"><b>Puiku kad sutikote išbandyti XPrivacy,
--Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietaisu.
--\n\nTodėl naudokite visiškai savo pačių rizika.</b>\n\nTaip pat žiūrėkite licenciją:</string>
+    <string name="msg_reboot">Privaloma perkrauti prietaisą!</string>
+    <string name="msg_first"><b>Puiku, kad sutikote išbandyti XPrivacy.
+Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietaisu.
+\n\nTodėl naudokite visiškai savo pačių rizika.</b>\n\nTaip pat žiūrėkite licenciją:</string>
     <string name="restrict_accounts">Paskyra (Google, Facebook, kita)</string>
     <string name="restrict_browser">Naršyklė (žymės/istorija)</string>
     <string name="restrict_calendar">Kalendorius</string>
-    <string name="restrict_calling">Skambinimas (telefonas, SMS, MMS)</string>
+    <string name="restrict_calling">Skambučiai (telefonas, SMS, MMS)</string>
     <string name="restrict_contacts">Kontaktai</string>
-    <string name="restrict_dictionary">Žodymas (vartotojo)</string>
+    <string name="restrict_dictionary">Žodynas (vartotojo)</string>
     <string name="restrict_identification">Identifikacija (prietaiso)</string>
     <string name="restrict_internet">Internetas</string>
-    <string name="restrict_location">Vieta (tiksli/apytiklė)</string>
+    <string name="restrict_location">Vieta (tiksli/apytikslė)</string>
     <string name="restrict_media">Media (muzika, nuotraukos, vaizdai)</string>
     <string name="restrict_messages">Pranešimai (SMS, MMS)</string>
     <string name="restrict_network">Tinklas (adresai)</string>
@@ -48,7 +48,7 @@
     <string name="restrict_storage">Atmintis (media, SD kortelė)</string>
     <string name="restrict_shell">Vykdymas (komandos, superuser)</string>
     <string name="restrict_system">Sistema (įdiegtos programos)</string>
-    <string name="restrict_view">Peržiura (Naršyklė)</string>
+    <string name="restrict_view">Peržiūra (Naršyklė)</string>
     <string name="title_category">Kategorija:</string>
     <string name="title_restrict">Žiūrėti apribojimus:</string>
     <string name="settings_lat">Platuma</string>
@@ -57,14 +57,14 @@
     <string name="settings_phone">Telefono numeris</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Šalis</string>
-    <string name="settings_subscriber">Abonentas ID</string>
+    <string name="settings_subscriber">Abonento ID</string>
     <string name="settings_fpermission">Filtruoti pagal leidimus</string>
     <string name="settings_fsystem">Nerodyti sistemos programų</string>
-    <string name="help_application">Programa</string>
+    <string name="help_application">Informacija</string>
     <string name="help_internet">Interneto leidimai</string>
     <string name="help_granted">Android leidimai</string>
     <string name="help_used">Privačių duomenų leidimai</string>
-    <string name="help_frozen">is disabled</string>
+    <string name="help_frozen">Išjungtų programų leidimai</string>
     <string name="help_dangerous">Pavojingi</string>
 
 </resources>
