--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -6,6 +6,7 @@
     <string name="app_version" formatted="false">XPrivacy версия: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework версия: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
+    <string name="menu_usage">Usage</string>
     <string name="menu_settings">Настройки</string>
     <string name="menu_template">Template</string>
     <string name="menu_update">Проверка за обновление</string>
