--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -6,6 +6,7 @@
     <string name="app_version" formatted="false">Versió d\'XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Versió d\'Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 per M. Bokhorst (M66B)</string>
+    <string name="menu_usage">Usage</string>
     <string name="menu_settings">Configuració</string>
     <string name="menu_template">Plantilla</string>
     <string name="menu_update">Comprova actualitzacions</string>
