--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -6,6 +6,7 @@
     <string name="app_version" formatted="false">Verze XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Verze Xposed frameworku: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
+    <string name="menu_usage">Usage</string>
     <string name="menu_settings">Nastavení</string>
     <string name="menu_template">Šablona</string>
     <string name="menu_update">Zkontrolovat aktualizace</string>
