--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -6,6 +6,7 @@
     <string name="app_version" formatted="false">XPrivacy Version: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed Framework Version: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
+    <string name="menu_usage">Usage</string>
     <string name="menu_settings">Einstellungen</string>
     <string name="menu_template">Template (Vorlage)</string>
     <string name="menu_update">Nach Updates suchen</string>
