--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -6,6 +6,7 @@
     <string name="app_version" formatted="false">Έκδοση XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Έκδοση Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 M. Bokhorst (M66B)</string>
+    <string name="menu_usage">Usage</string>
     <string name="menu_settings">Ρυθμίσεις</string>
     <string name="menu_template">Πρότυπο</string>
     <string name="menu_update">Έλεγχος για ενημερώσεις</string>
