--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -6,6 +6,7 @@
     <string name="app_version" formatted="false">Version XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Version de l\'environnement Xposed : %d</string>
     <string name="app_copyright">Droits d\'auteur: M. Bokhorst (M66B) \u00A9 2013 </string>
+    <string name="menu_usage">Usage</string>
     <string name="menu_settings">Paramètres</string>
     <string name="menu_template">Modèle</string>
     <string name="menu_update">Vérifier les mises à jour</string>
