--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -6,6 +6,7 @@
     <string name="app_version" formatted="false">XPrivacy גירסא: %s (%d)</string>
     <string name="app_xversion" formatted="false">גרסת מסגרת Xposed: %d</string>
     <string name="app_copyright">כל הזכויות שמורות \ u00A9 2013 על ידי מ \'Bokhorst (M66B)</string>
+    <string name="menu_usage">Usage</string>
     <string name="menu_settings">הגדרות</string>
     <string name="menu_template">תבנית ברירת מחדל</string>
     <string name="menu_update">בדוק עדכונים</string>
