--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -6,6 +6,7 @@
     <string name="app_version" formatted="false">XPrivacy verzió: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed keretrendszer verzió: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 M. Bokhorst (M66B)</string>
+    <string name="menu_usage">Usage</string>
     <string name="menu_settings">Beállítások</string>
     <string name="menu_template">Sablon</string>
     <string name="menu_update">Frissítés keresése</string>
