--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -6,6 +6,7 @@
     <string name="app_version" formatted="false">Versione di XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Versione di Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
+    <string name="menu_usage">Usage</string>
     <string name="menu_settings">Impostazioni</string>
     <string name="menu_template">Template</string>
     <string name="menu_update">Controlla aggiornamenti</string>
