--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -6,6 +6,7 @@
     <string name="app_version" formatted="false">Wersja XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Wersja Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
+    <string name="menu_usage">Usage</string>
     <string name="menu_settings">Ustawienia</string>
     <string name="menu_template">Szablon</string>
     <string name="menu_update">Sprawdź aktualizacje</string>
