--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -6,6 +6,7 @@
     <string name="app_version" formatted="false">Версия XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Версия Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
+    <string name="menu_usage">Usage</string>
     <string name="menu_settings">Параметры</string>
     <string name="menu_template">Шаблон</string>
     <string name="menu_update">Проверить обновления</string>
