--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -6,6 +6,7 @@
     <string name="app_version" formatted="false">XPrivacy različica: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework različica: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
+    <string name="menu_usage">Usage</string>
     <string name="menu_settings">Nastavitve</string>
     <string name="menu_template">Predloga</string>
     <string name="menu_update">Preveri posodobitve</string>
