--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -6,6 +6,7 @@
     <string name="app_version" formatted="false">XPrivacy versiyon: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework version: %d</string>
     <string name="app_copyright">Telif hakkı \u00A9 2013, M. Bokhorst (M66B)</string>
+    <string name="menu_usage">Usage</string>
     <string name="menu_settings">Ayarlar</string>
     <string name="menu_template">Şablon</string>
     <string name="menu_update">Güncelleştirme Ara</string>
