--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -6,7 +6,7 @@
     <string name="app_version" formatted="false">XPrivacy バージョン: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework バージョン: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
-    <string name="menu_usage">Usage</string>
+    <string name="menu_usage">履歴</string>
     <string name="menu_settings">設定</string>
     <string name="menu_template">カテゴリ</string>
     <string name="menu_update">更新を確認</string>
@@ -37,7 +37,7 @@
     <string name="restrict_browser">ブラウザ (お気に入り/履歴)</string>
     <string name="restrict_calendar">カレンダー</string>
     <string name="restrict_calling">通話 (電話, SMS, MMS)</string>
-    <string name="restrict_contacts">連絡先</string>
+    <string name="restrict_contacts">電話帳</string>
     <string name="restrict_dictionary">辞書 (ユーザー)</string>
     <string name="restrict_identification">ID (端末)</string>
     <string name="restrict_internet">インターネット</string>
