--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -6,7 +6,7 @@
     <string name="app_version" formatted="false">XPrivacy versija: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed sistemos versija: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
-    <string name="menu_usage">Usage</string>
+    <string name="menu_usage">Naudojimas</string>
     <string name="menu_settings">Parametrai</string>
     <string name="menu_template">Ruošiniai</string>
     <string name="menu_update">Tikrinti atnaujinimus</string>
@@ -61,7 +61,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="settings_subscriber">Abonento ID</string>
     <string name="settings_fpermission">Filtruoti pagal leidimus</string>
     <string name="settings_fsystem">Nerodyti sistemos programų</string>
-    <string name="help_application">Informacija</string>
+    <string name="help_application">Programa</string>
     <string name="help_internet">Interneto leidimai</string>
     <string name="help_granted">Android leidimai</string>
     <string name="help_used">Privačių duomenų leidimai</string>
