--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -7,6 +7,7 @@
     <string name="app_xversion" formatted="false">إطار  Xposed نسخة : %d</string>
     <string name="app_copyright">حقوق الطبع \u00A9 2013 ب M. Bokhorst (M66B)</string>
     <string name="menu_usage">Usage</string>
+    <string name="menu_refresh">Refresh</string>
     <string name="menu_settings">الإعدادات</string>
     <string name="menu_template">القالب</string>
     <string name="menu_update">فحص التحديثات</string>
