--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -7,6 +7,7 @@
     <string name="app_xversion" formatted="false">Xposed framework version: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 af M. Bokhorst (M66B)</string>
     <string name="menu_usage">Usage</string>
+    <string name="menu_refresh">Refresh</string>
     <string name="menu_settings">Indstillinger</string>
     <string name="menu_template">Template</string>
     <string name="menu_update">Tjek for opdateringer</string>
