--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -7,6 +7,7 @@
     <string name="app_xversion" formatted="false">Versión del framework Xposed: %d</string>
     <string name="app_copyright">Copyright © 2013 por M. Bokhorst (M66B)</string>
     <string name="menu_usage">Usage</string>
+    <string name="menu_refresh">Refresh</string>
     <string name="menu_settings">Configuración</string>
     <string name="menu_template">Plantilla</string>
     <string name="menu_update">Buscar actualizaciones</string>
