--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -7,6 +7,7 @@
     <string name="app_xversion" formatted="false">Xposed sistemos versija: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Naudojimas</string>
+    <string name="menu_refresh">Refresh</string>
     <string name="menu_settings">Parametrai</string>
     <string name="menu_template">Ruošiniai</string>
     <string name="menu_update">Tikrinti atnaujinimus</string>
