--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -7,6 +7,7 @@
     <string name="app_xversion" formatted="false">Xposed framework versie: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Gebruik</string>
+    <string name="menu_refresh">Ververs</string>
     <string name="menu_settings">Instellingen</string>
     <string name="menu_template">Sjabloon</string>
     <string name="menu_update">Controleer op nieuwe versie</string>
