--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -7,6 +7,7 @@
     <string name="app_xversion" formatted="false">Verzia Xposed: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Usage</string>
+    <string name="menu_refresh">Refresh</string>
     <string name="menu_settings">Nastavenia</string>
     <string name="menu_template">Šablóna</string>
     <string name="menu_update">Aktualizovať</string>
