--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -7,6 +7,7 @@
     <string name="app_xversion" formatted="false">Xposed framework верзија: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Usage</string>
+    <string name="menu_refresh">Refresh</string>
     <string name="menu_settings">Подешавања</string>
     <string name="menu_template">Шаблон</string>
     <string name="menu_update">Провери апдејт</string>
