--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -7,6 +7,7 @@
     <string name="app_xversion" formatted="false">Xposed framework version: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 M. Bokhorst (M66B)</string>
     <string name="menu_usage">Usage</string>
+    <string name="menu_refresh">Refresh</string>
     <string name="menu_settings">Inställningar</string>
     <string name="menu_template">Mall</string>
     <string name="menu_update">Sök efter uppdateringar</string>
