--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="app_notxposed" formatted="false">Verzia Xposed frameworku %d+ nie je nainštalovaná</string>
     <string name="app_notenabled">Modul XPrivacy nie je aktivovaný v Xposed</string>
-    <string name="app_wrongandroid">Testované len s Android verziou 4.0, 4.1 a 4.2</string>
+    <string name="app_wrongandroid">Only for Android version 4.0+</string>
     <string name="app_version" formatted="false">Verzia XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Verzia Xposed: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
@@ -68,5 +68,5 @@ a nie je nemožné zaručiť, že bude fungovať bezchybne na každom zariadení
     <string name="help_used">používala tieto dáta</string>
     <string name="help_frozen">je zakázaná</string>
     <string name="help_dangerous">je nebezpečná</string>
-    
+
 </resources>
