--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="app_notxposed" formatted="false">لم يتم تثبيت إطار xposed نسخة %d+</string>
     <string name="app_notenabled">لم يتم تفعيل XPrivacy</string>
-    <string name="app_wrongandroid">تم إختباره مع أندرويد آيسكريم وجلي بين فقط</string>
+    <string name="app_wrongandroid">Only for Android version 4.0+</string>
     <string name="app_version" formatted="false">نسخة XPrivacy : %s (%d)</string>
     <string name="app_xversion" formatted="false">إطار  Xposed نسخة : %d</string>
     <string name="app_copyright">حقوق الطبع \u00A9 2013 ب M. Bokhorst (M66B)</string>
@@ -68,5 +68,5 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="help_used">يستخدم هذه البيانات</string>
     <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">خطير</string>
-    
+
 </resources>
