--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="app_notxposed" formatted="false">Xposed framework версия %d+ не е инсталирана</string>
     <string name="app_notenabled">XPrivacy не е включено в инсталатора на Xposed</string>
-    <string name="app_wrongandroid">Приложението е тествано само с Android версия 4.0, 4.1 и 4.2</string>
+    <string name="app_wrongandroid">Only for Android version 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy версия: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework версия: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
@@ -68,5 +68,5 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="help_used">използвало е тези данни</string>
     <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">is dangerous</string>
-    
+
 </resources>
