--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="app_notxposed" formatted="false">Není nainstalován Xposed framework verze %d+</string>
     <string name="app_notenabled">Není povolen modul XPrivacy v Xposed installeru</string>
-    <string name="app_wrongandroid">Testováno pouze s verzemi Androidu 4.0, 4.1 a 4.2</string>
+    <string name="app_wrongandroid">Only for Android version 4.0+</string>
     <string name="app_version" formatted="false">Verze XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Verze Xposed frameworku: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
@@ -68,5 +68,5 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="help_used">přistupovala k těmto datům</string>
     <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">je nebezpečná</string>
-    
+
 </resources>
