--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="app_notxposed" formatted="false">Az Xposed keretrendszer %d+ nincs telepítve</string>
     <string name="app_notenabled">Az XPrivacy nincs engedélyezve az Xposed telepítőben</string>
-    <string name="app_wrongandroid">Csak Android 4.0, 4.1 és 4.2 verziókon teszteltve</string>
+    <string name="app_wrongandroid">Only for Android version 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy verzió: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed keretrendszer verzió: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 M. Bokhorst (M66B)</string>
@@ -68,5 +68,5 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="help_used">Használta ezt az adatot</string>
     <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">Veszélyes</string>
-    
+
 </resources>
