--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="app_notxposed" formatted="false">Xposed מסגרת גרסה &amp;d+ אינו מותקן</string>
     <string name="app_notenabled">XPrivacy אינו מאופשר במתקין Xposed</string>
-    <string name="app_wrongandroid">נבדק רק עם אנדרואיד גרסה 4.0, 4.1 ו 4.2</string>
+    <string name="app_wrongandroid">Only for Android version 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy גירסא: %s (%d)</string>
     <string name="app_xversion" formatted="false">גרסת מסגרת Xposed: %d</string>
     <string name="app_copyright">כל הזכויות שמורות \ u00A9 2013 על ידי מ \'Bokhorst (M66B)</string>
