--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="app_notxposed" formatted="false">Xposed framework wersja %d+ nie jest zainstalowany</string>
     <string name="app_notenabled">XPrivacy nie został włączony w instalatorze Xposed</string>
-    <string name="app_wrongandroid">Testowane tylko z Androidem w wersji 4.0, 4.1 oraz 4.2</string>
+    <string name="app_wrongandroid">Only for Android version 4.0+</string>
     <string name="app_version" formatted="false">Wersja XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Wersja Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
@@ -68,5 +68,5 @@
     <string name="help_used">użyła dostępu do danych</string>
     <string name="help_frozen">jest wyłączona</string>
     <string name="help_dangerous">jest niebezpieczne</string>
-    
+
 </resources>
