--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="app_notxposed" formatted="false">Xposed framework version %d+ is not installed</string>
     <string name="app_notenabled">O XPrivacy não está ativado no Xposed installer</string>
-    <string name="app_wrongandroid">Testado apenas no Android 4.0, 4.1 e 4.2</string>
+    <string name="app_wrongandroid">Only for Android version 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy version: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework version: %d</string>
     <string name="app_copyright">Direitos de autor \u00A9 2013 by M. Bokhorst (M66B)</string>
